<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetpassword">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#FECE2F"
        tools:ignore="MissingConstraints"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="680dp"
            android:onClick="back"
            app:layout_constraintRight_toLeftOf="@id/reg_lastname"
            android:backgroundTint="#FFFFFF"
            android:background="@drawable/ic_baseline_keyboard_backspace_24"
            tools:ignore="NotSibling" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="550dp"
            android:fontFamily="@font/bilbo_swash_caps"
            android:lineSpacingExtra="12sp"
            android:rotationY="17"
            android:text="Forget Password"
            android:textColor="#FFFF"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape1"
        android:layout_marginTop="200dp"
        android:padding="10dp"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pleaselogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please Enter Email to Reset Password!"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            android:paddingTop="100dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/hello"
            />




        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            android:textColorHint="#FFFFFF"
            android:layout_marginTop="20dp"
            app:hintAnimationEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_email"
                android:hint="Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_outline_email_24"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/reg_btn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="Reset password"
            android:backgroundTint="#FECE2F"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="loginUser"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal">

        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>