...
             android:orientation="horizontal"
             android:padding="1dp"
             android:weightSum="1">


             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/avatar"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:src="@color/black" />


             <ImageView
...
